--- a/Frontend/src/app/view-flagged-procurement-request/view-flagged-procurement-request.component.html
+++ b/Frontend/src/app/view-flagged-procurement-request/view-flagged-procurement-request.component.html
@@ -6,7 +6,6 @@
                 <mat-icon matSuffix style="width:30px; height: 44px; margin-left: 5%;">inventory</mat-icon>
                 <h2 class="uni-font">Procurement Request</h2>
             </div>
-
             <a mat-list-item class="uni-font" routerLink="/ViewConsumable">View Consumables</a>
             <a mat-list-item class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement Request</a>
             <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Request</a>
@@ -15,7 +14,7 @@
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
         <h1 style="margin-left: 1%; margin-top:1%; color: #244688; font-weight:700; font-size:32pt;">
-            View Pending Procurement Request
+            View Flagged Placed Procurement Request
         </h1>
 
         <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
@@ -40,37 +39,31 @@
                 <span class="loader" id="loading"></span>
             </div>
 
-            <table mat-table [dataSource]="SearchedPRequests" class="mat-elevation-z8" id="table">
+            <table mat-table [dataSource]="SearchedPDetails" class="mat-elevation-z8" id="table">
 
-                <ng-container matColumnDef="Name">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Name </th>
-                    <td mat-cell *matCellDef="let procurement"> {{procurement.name}} </td>
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Vendor Name </th>
+                    <td mat-cell *matCellDef="let procurement"> {{procurement.procurement_Request.vendor.name}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="Description">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Description</th>
-                    <td mat-cell *matCellDef="let procurement"> {{procurement.description}} </td>
+                <ng-container matColumnDef="employee">
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Created By</th>
+                    <td mat-cell *matCellDef="let procurement"> {{procurement.employee.employeeName}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="User">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">User</th>
-                    <td mat-cell *matCellDef="let procurement"> {{procurement.user.username}} </td>
+                <ng-container matColumnDef="mandateTotal">
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Mandate Limit</th>
+                    <td mat-cell *matCellDef="let procurement">{{procurement.employee.mandate_Limit.ammount| currency:'R'}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="Vendor">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Vendor
-                    </th>
-                    <td mat-cell *matCellDef="let procurement"> {{procurement.vendor.name}} </td>
+                <ng-container matColumnDef="Total">
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Request Total </th>
+                    <td mat-cell *matCellDef="let procurement"> {{procurement.total_Amount| currency:'R'}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="Status">
-                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Status
-                    </th>
-                    <td mat-cell *matCellDef="let procurement">
-                        <span [style.color]="getStatusColor(procurement.requisition_Status.name)">
-                            {{procurement.requisition_Status.name}} 
-                        </span>
-                    </td>
+                <ng-container matColumnDef="PaymentDue">
+                    <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;">Payment Due Date</th>
+                    <td mat-cell *matCellDef="let procurement">{{procurement.full_Payment_Due_Date | date:'dd/MM/y'}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="View">
@@ -78,8 +71,8 @@
                     <td mat-cell *matCellDef="let procurement" style="width:100px;">
 
                         <button class="noselect" type="button"
-                            style="background-color: #94CC5B;" routerLink="/PlaceProcurementRequestCreateDetails/{{procurement.procurement_Request_ID}}">
-                            <span class='text'>Create</span>
+                            style="background-color: #94CC5B;" routerLink="/ViewFlaggedProcurementDetails/{{procurement.procurement_Details_ID}}">
+                            <span class='text'>View</span>
                             <span class="icon" style="border-left: 1px solid #94CC5B; ">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="1em"
                                     viewBox="0 0 512 512">
