--- a/Frontend/src/app/view-pending-procurement-request/view-pending-procurement-request.component.html
+++ b/Frontend/src/app/view-pending-procurement-request/view-pending-procurement-request.component.html
@@ -6,10 +6,11 @@
                 <mat-icon matSuffix style="width:30px; height: 44px; margin-left: 5%;">inventory</mat-icon>
                 <h2 class="uni-font">Procurement Request</h2>
             </div>
-
+            ViewFlaggedProcurementRequest
             <a mat-list-item class="uni-font" routerLink="/ViewConsumable">View Consumables</a>
             <a mat-list-item class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement Request</a>
             <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Request</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement Request</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
