--- a/Frontend/src/app/view-procurement-request/view-procurement-request.component.html
+++ b/Frontend/src/app/view-procurement-request/view-procurement-request.component.html
@@ -10,6 +10,7 @@
             <a mat-list-item class="uni-font" routerLink="/ViewConsumable">View Consumables</a>
             <a mat-list-item class="uni-font" routerLink="/ViewPendingProcurementRequest">View Pending Procurement Request</a>
             <a mat-list-item class="uni-font" routerLink="/PlaceProcurementRequest">Place Procurement Request</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewFlaggedProcurementRequest">View Flagged Procurement Request</a>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="Main-content">
