--- a/Frontend/src/app/User/user-profile/user-profile.component.html
+++ b/Frontend/src/app/User/user-profile/user-profile.component.html
@@ -21,7 +21,7 @@
            <!--AdminTempelate-->
       <div *ngIf="rAdmin; else elseBlock">
         <h1 style="text-align:center; margin-bottom:5%;">
-          {{adm.adminName}} {{adm.adminSurname}} <br /> <sub style="color: #747474">{{rl.description}}</sub>
+          {{adm.adminName}} {{adm.adminSurname}} <br /> <sub style="color: #747474">{{rl.name}}</sub>
           <br />
           <button mat-raised-button
                   style="color:white; margin-top: 10px; margin-right: 10px; font-size: 16px; width: 85px; background-color: #244688;"
