fix updates of status of procurement

--- a/Frontend/src/app/view-procurement-request-approval/view-procurement-request-approval.component.css
+++ b/Frontend/src/app/view-procurement-request-approval/view-procurement-request-approval.component.css
@@ -90,3 +90,9 @@ mat-error:first-child {
     border-right: 1px solid #244688;
     
 }
+
+a:not([href]):not([class]), a:not([href]):not([class]):hover {
+    text-decoration:underline;
+    cursor: pointer!important;
+    
+}
