--- a/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
+++ b/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
@@ -3,7 +3,7 @@
     <div style="display: flex; justify-content: center; align-items: center;">
         <mat-card style="width: 1000px; margin-top: 1%; align-items: center; ">
             <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center"
-                fxLayoutGap="10px" (ngSubmit)="AddProcurementRequestB()">
+                fxLayoutGap="10px" (ngSubmit)="EditProcurementRequestB()">
                 <mat-card-header>
                     <mat-card-title
                         style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Create
@@ -109,7 +109,7 @@
 
                                         <input type="file" id="file1" placeholder="" formControlName="OtherQuote1"
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
-                                            (change)="onFile1Upload($event)" required>
+                                            (change)="onFile1Upload($event)">
 
                                     </mat-card-content>
                                 </td>
@@ -121,7 +121,7 @@
 
                                         <input type="file" id="file2" placeholder="" formControlName="OtherQuote2"
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
-                                            (change)="onFile2Upload($event)" required>
+                                            (change)="onFile2Upload($event)">
 
                                     </mat-card-content>
                                 </td>
@@ -136,12 +136,31 @@
 
                                         <input type="file" id="file3" placeholder="" formControlName="OtherQuote3"
                                             style="border: solid #244688; border-radius: 5px; " accept=".pdf"
-                                            (change)="onFile3Upload($event)" required>
+                                            (change)="onFile3Upload($event)">
 
                                     </mat-card-content>
                                 </td>
                             </tr>
+                        </table>
 
+                        <table class="table">
+                            <thead>
+                                <tr style="background-color: lightgray;">
+                                    <th>Your Quotes</th>
+                                    <th>Quote</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let file of FileDetails; let i = index">
+                                    <td>
+                                        Quote {{i + 1}}
+                                    </td>
+                                    <td>
+                                        <a (click)="openPDFInNewTab(i)" target="_blank"
+                                            style="color: rgb(65, 143, 227);">{{FileDetails[i].FileName}}</a>
+                                    </td>
+                                </tr>
+                            </tbody>
                         </table>
 
 
@@ -179,7 +198,7 @@
     <div style="display: flex; justify-content: center; align-items: center;">
         <mat-card style="width: 1000px; margin-top: 1%; align-items: center; ">
             <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center"
-                fxLayoutGap="10px" (ngSubmit)="AddProcurementRequestA()">
+                fxLayoutGap="10px" (ngSubmit)="EditProcurementRequestA()">
                 <mat-card-header>
                     <mat-card-title
                         style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Edit
@@ -294,12 +313,6 @@
                     </mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
-                    <!--<button mat-raised-button type="submit"
-                          style="width: 150px; font-size: 14px; height: 42px; margin: 10px;" [disabled]="!myForm.valid"
-                          [ngStyle]="{'background-color': !myForm.valid ? 'rgba(148, 204, 91, 0.6)' : '#94CC5B','color': !myForm.valid ? 'rgba(255, 255, 255, 0.6)' : 'white'}">
-                    Save
-                  </button>-->
-
                     <div class="wrapper">
                         <button class="" type="submit" [disabled]="!myForm.valid">
                             <span>Save</span>
