--- a/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
+++ b/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
@@ -6,7 +6,7 @@
                 fxLayoutGap="10px" (ngSubmit)="EditProcurementRequestB()">
                 <mat-card-header>
                     <mat-card-title
-                        style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Create
+                        style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Edit
                         Procurement Request</mat-card-title>
                     <mat-card-subtitle>
                         <table style="width:100%;" cellspacing="0">
@@ -101,7 +101,7 @@
                                 </td>
                             </tr>
 
-                            <tr>
+                            <!-- <tr>
                                 <td style="width:100%;">
                                     <mat-card-content>
                                         <label style=" color:black;">Preferred Quote:</label>
@@ -140,7 +140,7 @@
 
                                     </mat-card-content>
                                 </td>
-                            </tr>
+                            </tr> -->
                         </table>
 
                         <table class="table">
@@ -274,7 +274,7 @@
                                     </mat-card-content>
                                 </td>
 
-                                <td style="width:100%;">
+                                <!-- <td style="width:100%;">
                                     <mat-card-content>
                                         <label style=" color:black;">Replace Quote:</label>
                                         <br />
@@ -285,7 +285,7 @@
                                         <mat-hint align="end">Provide Quote to replace.</mat-hint>
 
                                     </mat-card-content>
-                                </td>
+                                </td> -->
                             </tr>
 
                         </table>
