--- a/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
+++ b/Frontend/src/app/edit-procurement-request/edit-procurement-request.component.html
@@ -101,7 +101,7 @@
                                 </td>
                             </tr>
 
-                            <!-- <tr>
+                            <tr>
                                 <td style="width:100%;">
                                     <mat-card-content>
                                         <label style=" color:black;">Preferred Quote:</label>
@@ -140,7 +140,7 @@
 
                                     </mat-card-content>
                                 </td>
-                            </tr> -->
+                            </tr>
                         </table>
 
                         <table class="table">
@@ -274,7 +274,7 @@
                                     </mat-card-content>
                                 </td>
 
-                                <!-- <td style="width:100%;">
+                                <td style="width:100%;">
                                     <mat-card-content>
                                         <label style=" color:black;">Replace Quote:</label>
                                         <br />
@@ -285,7 +285,7 @@
                                         <mat-hint align="end">Provide Quote to replace.</mat-hint>
 
                                     </mat-card-content>
-                                </td> -->
+                                </td>
                             </tr>
 
                         </table>
